--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,7 @@
     "typescript": "^4.6.4"
   },
   "scripts": {
-    "start": "node dist/app.js",
+    "start": "nodemon ./dist/bin/www.js",
     "build": "tsc -p .",
     "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" ./bin/www.ts"
   }
