mvc모델 나누기(나중에 다시)

--- a/app/package.json
+++ b/app/package.json
@@ -18,5 +18,8 @@
     "start": "nodemon ./dist/bin/www.js",
     "build": "tsc -p .",
     "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" ./bin/www.ts"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.0"
   }
 }
