--- a/app/package.json
+++ b/app/package.json
@@ -8,11 +8,11 @@
   },
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mysql": "^2.18.1"
   },
-  "devDependencies": {},
   "scripts": {
-    "start" : "nodemon ./bin/www.js",
+    "start": "nodemon ./bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
