--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "node_server_pt": "bin/www.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mysql": "^2.18.1"
