--- a/app/package.json
+++ b/app/package.json
@@ -7,10 +7,13 @@
     "node_server_pt": "bin/www.js"
   },
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mysql": "^2.18.1"
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "winston": "^3.8.1"
   },
   "scripts": {
     "start": "nodemon ./bin/www.js",
